# physics-sim

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: camera.hpp  circle.hpp  physics_sim.hpp  rigid_body.hpp  shader.hpp  sphere.hpp  utils.hpp
include/glad/: glad.h
shaders/: fragShader1.fs  fragShader2.fs  vertShader.vert  vertShader.vs
src/: camera.cpp  circle.cpp  glad.c  main.cpp  physics_sim.cpp  rigid_body.cpp  shader.cpp  sphere.cpp
